# SnakeGameAI

./: .gitignore  pyproject.toml
game/: agent.py  helper.py  model.py  snake_game.py
